--- a/genindex.html
+++ b/genindex.html
@@ -10,8 +10,8 @@
           <link rel="stylesheet" href="_static/theme.css " type="text/css" />
       
       <!-- sphinx script_files -->
-        <script src="_static/documentation_options.js?v=70763fe1"></script>
-        <script src="_static/doctools.js?v=888ff710"></script>
+        <script src="_static/documentation_options.js?v=ce85efbf"></script>
+        <script src="_static/doctools.js?v=9a2dae69"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
 
       
@@ -138,13 +138,34 @@
         <li><a href="l2.knowledge.inference_rule.html#module-l2.knowledge.inference_rule">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     l2.planning
 
       <ul>
         <li><a href="l2.planning.html#module-l2.planning">module</a>
+</li>
+      </ul></li>
+      <li>
+    l2.planning.abstract
+
+      <ul>
+        <li><a href="l2.planning.abstract.html#module-l2.planning.abstract">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    l2.planning.hierarchical
+
+      <ul>
+        <li><a href="l2.planning.hierarchical.html#module-l2.planning.hierarchical">module</a>
+</li>
+      </ul></li>
+      <li>
+    l2.planning.map_reduce
+
+      <ul>
+        <li><a href="l2.planning.map_reduce.html#module-l2.planning.map_reduce">module</a>
 </li>
       </ul></li>
       <li>
@@ -175,6 +196,20 @@
         <li><a href="l2.tool.html#module-l2.tool">module</a>
 </li>
       </ul></li>
+      <li>
+    l2.util
+
+      <ul>
+        <li><a href="l2.util.html#module-l2.util">module</a>
+</li>
+      </ul></li>
+      <li>
+    l2.util.lm
+
+      <ul>
+        <li><a href="l2.util.lm.html#module-l2.util.lm">module</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -199,6 +234,12 @@
 </li>
         <li><a href="l2.planning.html#module-l2.planning">l2.planning</a>
 </li>
+        <li><a href="l2.planning.abstract.html#module-l2.planning.abstract">l2.planning.abstract</a>
+</li>
+        <li><a href="l2.planning.hierarchical.html#module-l2.planning.hierarchical">l2.planning.hierarchical</a>
+</li>
+        <li><a href="l2.planning.map_reduce.html#module-l2.planning.map_reduce">l2.planning.map_reduce</a>
+</li>
         <li><a href="l2.reasoning.html#module-l2.reasoning">l2.reasoning</a>
 </li>
         <li><a href="l2.resource.html#module-l2.resource">l2.resource</a>
@@ -206,6 +247,10 @@
         <li><a href="l2.task.html#module-l2.task">l2.task</a>
 </li>
         <li><a href="l2.tool.html#module-l2.tool">l2.tool</a>
+</li>
+        <li><a href="l2.util.html#module-l2.util">l2.util</a>
+</li>
+        <li><a href="l2.util.lm.html#module-l2.util.lm">l2.util.lm</a>
 </li>
       </ul></li>
   </ul></td>
@@ -219,7 +264,7 @@
 </ul><div class="footer" role="contentinfo">
       &#169; Copyright 2024, Aitomatic, Inc. &lt;engineering@aitomatic.com&gt;.
     <br>
-    Created using <a href="http://sphinx-doc.org/">Sphinx</a> 7.2.6 with <a href="https://github.com/schettino72/sphinx_press_theme">Press Theme</a> 0.8.0.
+    Created using <a href="http://sphinx-doc.org/">Sphinx</a> 7.3.7 with <a href="https://github.com/schettino72/sphinx_press_theme">Press Theme</a> 0.9.1.
 </div>
             </div>
           </div>
