--- a/genindex.html
+++ b/genindex.html
@@ -11,7 +11,7 @@
       
       <!-- sphinx script_files -->
         <script src="_static/documentation_options.js?v=ce85efbf"></script>
-        <script src="_static/doctools.js?v=888ff710"></script>
+        <script src="_static/doctools.js?v=9a2dae69"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
 
       
@@ -98,6 +98,7 @@
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
@@ -170,6 +171,8 @@
       <li><a href="openssa.l2.util.lm.abstract.html#openssa.l2.util.lm.abstract.AbstractLM.call">call() (openssa.l2.util.lm.abstract.AbstractLM method)</a>
 
       <ul>
+        <li><a href="openssa.l2.util.lm.llama.html#openssa.l2.util.lm.llama.LlamaLM.call">(openssa.l2.util.lm.llama.LlamaLM method)</a>
+</li>
         <li><a href="openssa.l2.util.lm.openai.html#openssa.l2.util.lm.openai.OpenAILM.call">(openssa.l2.util.lm.openai.OpenAILM method)</a>
 </li>
       </ul></li>
@@ -218,6 +221,8 @@
       <li><a href="openssa.l2.util.lm.abstract.html#openssa.l2.util.lm.abstract.AbstractLM.from_defaults">from_defaults() (openssa.l2.util.lm.abstract.AbstractLM class method)</a>
 
       <ul>
+        <li><a href="openssa.l2.util.lm.llama.html#openssa.l2.util.lm.llama.LlamaLM.from_defaults">(openssa.l2.util.lm.llama.LlamaLM class method)</a>
+</li>
         <li><a href="openssa.l2.util.lm.openai.html#openssa.l2.util.lm.openai.OpenAILM.from_defaults">(openssa.l2.util.lm.openai.OpenAILM class method)</a>
 </li>
       </ul></li>
@@ -246,6 +251,8 @@
       <li><a href="openssa.l2.util.lm.abstract.html#openssa.l2.util.lm.abstract.AbstractLM.get_response">get_response() (openssa.l2.util.lm.abstract.AbstractLM method)</a>
 
       <ul>
+        <li><a href="openssa.l2.util.lm.llama.html#openssa.l2.util.lm.llama.LlamaLM.get_response">(openssa.l2.util.lm.llama.LlamaLM method)</a>
+</li>
         <li><a href="openssa.l2.util.lm.openai.html#openssa.l2.util.lm.openai.OpenAILM.get_response">(openssa.l2.util.lm.openai.OpenAILM method)</a>
 </li>
       </ul></li>
@@ -268,6 +275,14 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="openssa.l2.resource.file.html#openssa.l2.resource.file.FileResource.is_single_file">is_single_file (openssa.l2.resource.file.FileResource property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="openssa.l2.util.lm.llama.html#openssa.l2.util.lm.llama.LlamaLM">LlamaLM (class in openssa.l2.util.lm.llama)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -366,6 +381,8 @@
         <li><a href="openssa.l2.util.lm.html#module-openssa.l2.util.lm">openssa.l2.util.lm</a>
 </li>
         <li><a href="openssa.l2.util.lm.abstract.html#module-openssa.l2.util.lm.abstract">openssa.l2.util.lm.abstract</a>
+</li>
+        <li><a href="openssa.l2.util.lm.llama.html#module-openssa.l2.util.lm.llama">openssa.l2.util.lm.llama</a>
 </li>
         <li><a href="openssa.l2.util.lm.openai.html#module-openssa.l2.util.lm.openai">openssa.l2.util.lm.openai</a>
 </li>
@@ -725,6 +742,13 @@
 </li>
       </ul></li>
       <li>
+    openssa.l2.util.lm.llama
+
+      <ul>
+        <li><a href="openssa.l2.util.lm.llama.html#module-openssa.l2.util.lm.llama">module</a>
+</li>
+      </ul></li>
+      <li>
     openssa.l2.util.lm.openai
 
       <ul>
@@ -865,7 +889,7 @@
 </ul><div class="footer" role="contentinfo">
       &#169; Copyright 2024, Aitomatic, Inc. &lt;engineering@aitomatic.com&gt;.
     <br>
-    Created using <a href="http://sphinx-doc.org/">Sphinx</a> 7.2.6 with <a href="https://github.com/schettino72/sphinx_press_theme">Press Theme</a> 0.8.0.
+    Created using <a href="http://sphinx-doc.org/">Sphinx</a> 7.3.7 with <a href="https://github.com/schettino72/sphinx_press_theme">Press Theme</a> 0.9.1.
 </div>
             </div>
           </div>
