update GitHub Pages documentation site

--- a/genindex.html
+++ b/genindex.html
@@ -131,11 +131,7 @@
 </li>
       <li><a href="openssa.l2.resource.abstract.html#openssa.l2.resource.abstract.AbstractResource">AbstractResource (class in openssa.l2.resource.abstract)</a>
 </li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask">AbstractTask (class in openssa.l2.task.abstract)</a>
-</li>
       <li><a href="openssa.l2.tool.abstract.html#openssa.l2.tool.abstract.AbstractTool">AbstractTool (class in openssa.l2.tool.abstract)</a>
-</li>
-      <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OodaReasoner.act">act() (openssa.l2.reasoning.ooda.OodaReasoner method)</a>
 </li>
       <li><a href="openssa.l2.agent.agent.html#openssa.l2.agent.agent.Agent.add_knowledge">add_knowledge() (openssa.l2.agent.agent.Agent method)</a>
 </li>
@@ -144,8 +140,6 @@
       <li><a href="openssa.l2.agent.agent.html#openssa.l2.agent.agent.Agent.add_resources">add_resources() (openssa.l2.agent.agent.Agent method)</a>
 </li>
       <li><a href="openssa.l2.agent.agent.html#openssa.l2.agent.agent.Agent">Agent (class in openssa.l2.agent.agent)</a>
-</li>
-      <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OrientResult.answer">answer (openssa.l2.reasoning.ooda.OrientResult attribute)</a>
 </li>
       <li><a href="openssa.l2.resource.abstract.html#openssa.l2.resource.abstract.AbstractResource.answer">answer() (openssa.l2.resource.abstract.AbstractResource method)</a>
 
@@ -157,10 +151,10 @@
 </li>
       <li><a href="openssa.l2.util.lm.abstract.html#openssa.l2.util.lm.abstract.AbstractLM.api_key">api_key (openssa.l2.util.lm.abstract.AbstractLM attribute)</a>
 </li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.ask">ask (openssa.l2.task.abstract.AbstractTask attribute)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.ask">ask (openssa.l2.task.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.TaskDict.ask">(openssa.l2.task.abstract.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.ask">(openssa.l2.task.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.task.nature.html#openssa.l2.task.nature.TaskNature.ASSESS">ASSESS (openssa.l2.task.nature.TaskNature attribute)</a>
@@ -203,10 +197,6 @@
       </ul></li>
       <li><a href="openssa.l2.planning.abstract.plan.html#openssa.l2.planning.abstract.plan.AbstractPlan.concretize_tasks_from_template">concretize_tasks_from_template() (openssa.l2.planning.abstract.plan.AbstractPlan method)</a>
 </li>
-      <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OrientResult.confident">confident (openssa.l2.reasoning.ooda.OrientResult attribute)</a>
-</li>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config">Config (class in openssa.l2.config)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -215,26 +205,30 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="openssa.l2.resource.db.html#openssa.l2.resource.db.DbResource">DbResource (class in openssa.l2.resource.db)</a>
 </li>
-      <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OodaReasoner.decide">decide() (openssa.l2.reasoning.ooda.OodaReasoner method)</a>
-</li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.decompose">decompose() (openssa.l2.task.abstract.AbstractTask method)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.decompose">decompose() (openssa.l2.task.task.Task method)</a>
 </li>
       <li><a href="openssa.l2.task.status.html#openssa.l2.task.status.TaskStatus.DECOMPOSED">DECOMPOSED (openssa.l2.task.status.TaskStatus attribute)</a>
 </li>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config.DEFAULT_LLAMA_MODEL">DEFAULT_LLAMA_MODEL (openssa.l2.config.Config attribute)</a>
+      <li><a href="openssa.l2.util.lm.openai.html#openssa.l2.util.lm.openai.default_llama_index_openai_embed_model">default_llama_index_openai_embed_model() (in module openssa.l2.util.lm.openai)</a>
+</li>
+      <li><a href="openssa.l2.util.lm.openai.html#openssa.l2.util.lm.openai.default_llama_index_openai_lm">default_llama_index_openai_lm() (in module openssa.l2.util.lm.openai)</a>
+</li>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.DEFAULT_LLAMA_MODEL">DEFAULT_LLAMA_MODEL (openssa.l2.util.lm.config.LMConfig attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config.DEFAULT_OPENAI_MODEL">DEFAULT_OPENAI_MODEL (openssa.l2.config.Config attribute)</a>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.DEFAULT_OPENAI_MODEL">DEFAULT_OPENAI_MODEL (openssa.l2.util.lm.config.LMConfig attribute)</a>
 </li>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config.DEFAULT_TEMPERATURE">DEFAULT_TEMPERATURE (openssa.l2.config.Config attribute)</a>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.DEFAULT_SEED">DEFAULT_SEED (openssa.l2.util.lm.config.LMConfig attribute)</a>
+</li>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.DEFAULT_TEMPERATURE">DEFAULT_TEMPERATURE (openssa.l2.util.lm.config.LMConfig attribute)</a>
 </li>
       <li><a href="openssa.l2.task.status.html#openssa.l2.task.status.TaskStatus.DONE">DONE (openssa.l2.task.status.TaskStatus attribute)</a>
 </li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.dynamic_decomposer">dynamic_decomposer (openssa.l2.task.abstract.AbstractTask attribute)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.dynamic_decomposer">dynamic_decomposer (openssa.l2.task.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.TaskDict.dynamic_decomposer">(openssa.l2.task.abstract.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.dynamic_decomposer">(openssa.l2.task.task.TaskDict attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -280,12 +274,12 @@
       <li><a href="openssa.l2.planning.hierarchical.plan.html#openssa.l2.planning.hierarchical.plan.HTP.from_dict">from_dict() (openssa.l2.planning.hierarchical.plan.HTP class method)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.from_dict">(openssa.l2.task.abstract.AbstractTask class method)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.from_dict">(openssa.l2.task.task.Task class method)</a>
 </li>
       </ul></li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.from_dict_or_str">from_dict_or_str() (openssa.l2.task.abstract.AbstractTask class method)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.from_dict_or_str">from_dict_or_str() (openssa.l2.task.task.Task class method)</a>
 </li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.from_str">from_str() (openssa.l2.task.abstract.AbstractTask class method)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.from_str">from_str() (openssa.l2.task.task.Task class method)</a>
 </li>
       <li><a href="openssa.l2.resource.file.html#openssa.l2.resource.file.FileResource.fs">fs (openssa.l2.resource.file.FileResource property)</a>
 </li>
@@ -339,9 +333,9 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config.LLAMA_API_KEY">LLAMA_API_KEY (openssa.l2.config.Config attribute)</a>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.LLAMA_API_KEY">LLAMA_API_KEY (openssa.l2.util.lm.config.LMConfig attribute)</a>
 </li>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config.LLAMA_API_URL">LLAMA_API_URL (openssa.l2.config.Config attribute)</a>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.LLAMA_API_URL">LLAMA_API_URL (openssa.l2.util.lm.config.LMConfig attribute)</a>
 </li>
       <li><a href="openssa.l2.util.lm.llama.html#openssa.l2.util.lm.llama.LlamaLM">LlamaLM (class in openssa.l2.util.lm.llama)</a>
 </li>
@@ -355,6 +349,8 @@
         <li><a href="openssa.l2.resource.file.html#openssa.l2.resource.file.FileResource.lm">(openssa.l2.resource.file.FileResource attribute)</a>
 </li>
       </ul></li>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig">LMConfig (class in openssa.l2.util.lm.config)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -378,8 +374,6 @@
         <li><a href="openssa.l2.agent.html#module-openssa.l2.agent">openssa.l2.agent</a>
 </li>
         <li><a href="openssa.l2.agent.agent.html#module-openssa.l2.agent.agent">openssa.l2.agent.agent</a>
-</li>
-        <li><a href="openssa.l2.config.html#module-openssa.l2.config">openssa.l2.config</a>
 </li>
         <li><a href="openssa.l2.knowledge.html#module-openssa.l2.knowledge">openssa.l2.knowledge</a>
 </li>
@@ -441,8 +435,6 @@
 </li>
         <li><a href="openssa.l2.task.html#module-openssa.l2.task">openssa.l2.task</a>
 </li>
-        <li><a href="openssa.l2.task.abstract.html#module-openssa.l2.task.abstract">openssa.l2.task.abstract</a>
-</li>
         <li><a href="openssa.l2.task.nature.html#module-openssa.l2.task.nature">openssa.l2.task.nature</a>
 </li>
         <li><a href="openssa.l2.task.status.html#module-openssa.l2.task.status">openssa.l2.task.status</a>
@@ -458,6 +450,8 @@
         <li><a href="openssa.l2.util.lm.html#module-openssa.l2.util.lm">openssa.l2.util.lm</a>
 </li>
         <li><a href="openssa.l2.util.lm.abstract.html#module-openssa.l2.util.lm.abstract">openssa.l2.util.lm.abstract</a>
+</li>
+        <li><a href="openssa.l2.util.lm.config.html#module-openssa.l2.util.lm.config">openssa.l2.util.lm.config</a>
 </li>
         <li><a href="openssa.l2.util.lm.llama.html#module-openssa.l2.util.lm.llama">openssa.l2.util.lm.llama</a>
 </li>
@@ -486,10 +480,10 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.nature">nature (openssa.l2.task.abstract.AbstractTask attribute)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.nature">nature (openssa.l2.task.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.TaskDict.nature">(openssa.l2.task.abstract.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.nature">(openssa.l2.task.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.task.status.html#openssa.l2.task.status.TaskStatus.NEEDING_DECOMPOSITION">NEEDING_DECOMPOSITION (openssa.l2.task.status.TaskStatus attribute)</a>
@@ -500,8 +494,6 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OodaReasoner.observe">observe() (openssa.l2.reasoning.ooda.OodaReasoner method)</a>
-</li>
       <li><a href="openssa.l2.resource.file.html#openssa.l2.resource.file.FileResource.on_gcs">on_gcs (openssa.l2.resource.file.FileResource property)</a>
 </li>
       <li><a href="openssa.l2.resource.file.html#openssa.l2.resource.file.FileResource.on_remote">on_remote (openssa.l2.resource.file.FileResource property)</a>
@@ -514,9 +506,9 @@
 </li>
       <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OodaReasoner">OodaReasoner (class in openssa.l2.reasoning.ooda)</a>
 </li>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config.OPENAI_API_KEY">OPENAI_API_KEY (openssa.l2.config.Config attribute)</a>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.OPENAI_API_KEY">OPENAI_API_KEY (openssa.l2.util.lm.config.LMConfig attribute)</a>
 </li>
-      <li><a href="openssa.l2.config.html#openssa.l2.config.Config.OPENAI_API_URL">OPENAI_API_URL (openssa.l2.config.Config attribute)</a>
+      <li><a href="openssa.l2.util.lm.config.html#openssa.l2.util.lm.config.LMConfig.OPENAI_API_URL">OPENAI_API_URL (openssa.l2.util.lm.config.LMConfig attribute)</a>
 </li>
       <li><a href="openssa.l2.util.lm.openai.html#openssa.l2.util.lm.openai.OpenAILM">OpenAILM (class in openssa.l2.util.lm.openai)</a>
 </li>
@@ -546,13 +538,6 @@
 
       <ul>
         <li><a href="openssa.l2.agent.agent.html#module-openssa.l2.agent.agent">module</a>
-</li>
-      </ul></li>
-      <li>
-    openssa.l2.config
-
-      <ul>
-        <li><a href="openssa.l2.config.html#module-openssa.l2.config">module</a>
 </li>
       </ul></li>
       <li>
@@ -768,13 +753,6 @@
 </li>
       </ul></li>
       <li>
-    openssa.l2.task.abstract
-
-      <ul>
-        <li><a href="openssa.l2.task.abstract.html#module-openssa.l2.task.abstract">module</a>
-</li>
-      </ul></li>
-      <li>
     openssa.l2.task.nature
 
       <ul>
@@ -831,6 +809,13 @@
 </li>
       </ul></li>
       <li>
+    openssa.l2.util.lm.config
+
+      <ul>
+        <li><a href="openssa.l2.util.lm.config.html#module-openssa.l2.util.lm.config">module</a>
+</li>
+      </ul></li>
+      <li>
     openssa.l2.util.lm.llama
 
       <ul>
@@ -851,10 +836,6 @@
         <li><a href="openssa.l2.util.misc.html#module-openssa.l2.util.misc">module</a>
 </li>
       </ul></li>
-      <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OodaReasoner.orient">orient() (openssa.l2.reasoning.ooda.OodaReasoner method)</a>
-</li>
-      <li><a href="openssa.l2.reasoning.ooda.html#openssa.l2.reasoning.ooda.OrientResult">OrientResult (class in openssa.l2.reasoning.ooda)</a>
-</li>
       <li><a href="openssa.l2.resource.abstract.html#openssa.l2.resource.abstract.AbstractResource.overview">overview (openssa.l2.resource.abstract.AbstractResource property)</a>
 </li>
   </ul></td>
@@ -920,15 +901,15 @@
       <li><a href="openssa.l2.agent.agent.html#openssa.l2.agent.agent.Agent.resources">resources (openssa.l2.agent.agent.Agent attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.resources">(openssa.l2.task.abstract.AbstractTask attribute)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.resources">(openssa.l2.task.task.Task attribute)</a>
 </li>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.TaskDict.resources">(openssa.l2.task.abstract.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.resources">(openssa.l2.task.task.TaskDict attribute)</a>
 </li>
       </ul></li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.result">result (openssa.l2.task.abstract.AbstractTask attribute)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.result">result (openssa.l2.task.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.TaskDict.result">(openssa.l2.task.abstract.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.result">(openssa.l2.task.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.task.nature.html#openssa.l2.task.nature.TaskNature.RETRIEVE">RETRIEVE (openssa.l2.task.nature.TaskNature attribute)</a>
@@ -947,10 +928,10 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.status">status (openssa.l2.task.abstract.AbstractTask attribute)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.status">status (openssa.l2.task.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.TaskDict.status">(openssa.l2.task.abstract.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.status">(openssa.l2.task.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.planning.abstract.plan.html#openssa.l2.planning.abstract.plan.AbstractPlan.sub_plans">sub_plans (openssa.l2.planning.abstract.plan.AbstractPlan attribute)</a>
@@ -965,7 +946,7 @@
 </li>
       <li><a href="openssa.l2.planning.abstract.plan.html#openssa.l2.planning.abstract.plan.AbstractPlan.task">task (openssa.l2.planning.abstract.plan.AbstractPlan attribute)</a>
 </li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.TaskDict">TaskDict (class in openssa.l2.task.abstract)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict">TaskDict (class in openssa.l2.task.task)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -975,7 +956,7 @@
 </li>
       <li><a href="openssa.l2.planning.hierarchical.plan.html#openssa.l2.planning.hierarchical.plan.HTP.to_dict">to_dict() (openssa.l2.planning.hierarchical.plan.HTP method)</a>
 </li>
-      <li><a href="openssa.l2.task.abstract.html#openssa.l2.task.abstract.AbstractTask.to_json_dict">to_json_dict() (openssa.l2.task.abstract.AbstractTask method)</a>
+      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.to_json_dict">to_json_dict() (openssa.l2.task.task.Task method)</a>
 </li>
   </ul></td>
 </tr></table>
