update GitHub Pages documentation site

--- a/genindex.html
+++ b/genindex.html
@@ -151,10 +151,10 @@
 </li>
       <li><a href="openssa.l2.util.lm.abstract.html#openssa.l2.util.lm.abstract.AbstractLM.api_key">api_key (openssa.l2.util.lm.abstract.AbstractLM attribute)</a>
 </li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.ask">ask (openssa.l2.task.task.Task attribute)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.ask">ask (openssa.l2.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.ask">(openssa.l2.task.task.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.TaskDict.ask">(openssa.l2.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.task.nature.html#openssa.l2.task.nature.TaskNature.ASSESS">ASSESS (openssa.l2.task.nature.TaskNature attribute)</a>
@@ -205,7 +205,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="openssa.l2.resource.db.html#openssa.l2.resource.db.DbResource">DbResource (class in openssa.l2.resource.db)</a>
 </li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.decompose">decompose() (openssa.l2.task.task.Task method)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.decompose">decompose() (openssa.l2.task.Task method)</a>
 </li>
       <li><a href="openssa.l2.task.status.html#openssa.l2.task.status.TaskStatus.DECOMPOSED">DECOMPOSED (openssa.l2.task.status.TaskStatus attribute)</a>
 </li>
@@ -225,10 +225,10 @@
 </li>
       <li><a href="openssa.l2.task.status.html#openssa.l2.task.status.TaskStatus.DONE">DONE (openssa.l2.task.status.TaskStatus attribute)</a>
 </li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.dynamic_decomposer">dynamic_decomposer (openssa.l2.task.task.Task attribute)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.dynamic_decomposer">dynamic_decomposer (openssa.l2.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.dynamic_decomposer">(openssa.l2.task.task.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.TaskDict.dynamic_decomposer">(openssa.l2.task.TaskDict attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -274,12 +274,12 @@
       <li><a href="openssa.l2.planning.hierarchical.plan.html#openssa.l2.planning.hierarchical.plan.HTP.from_dict">from_dict() (openssa.l2.planning.hierarchical.plan.HTP class method)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.from_dict">(openssa.l2.task.task.Task class method)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.Task.from_dict">(openssa.l2.task.Task class method)</a>
 </li>
       </ul></li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.from_dict_or_str">from_dict_or_str() (openssa.l2.task.task.Task class method)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.from_dict_or_str">from_dict_or_str() (openssa.l2.task.Task class method)</a>
 </li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.from_str">from_str() (openssa.l2.task.task.Task class method)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.from_str">from_str() (openssa.l2.task.Task class method)</a>
 </li>
       <li><a href="openssa.l2.resource.file.html#openssa.l2.resource.file.FileResource.fs">fs (openssa.l2.resource.file.FileResource property)</a>
 </li>
@@ -439,8 +439,6 @@
 </li>
         <li><a href="openssa.l2.task.status.html#module-openssa.l2.task.status">openssa.l2.task.status</a>
 </li>
-        <li><a href="openssa.l2.task.task.html#module-openssa.l2.task.task">openssa.l2.task.task</a>
-</li>
         <li><a href="openssa.l2.tool.html#module-openssa.l2.tool">openssa.l2.tool</a>
 </li>
         <li><a href="openssa.l2.tool.abstract.html#module-openssa.l2.tool.abstract">openssa.l2.tool.abstract</a>
@@ -480,10 +478,10 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.nature">nature (openssa.l2.task.task.Task attribute)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.nature">nature (openssa.l2.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.nature">(openssa.l2.task.task.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.TaskDict.nature">(openssa.l2.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.task.status.html#openssa.l2.task.status.TaskStatus.NEEDING_DECOMPOSITION">NEEDING_DECOMPOSITION (openssa.l2.task.status.TaskStatus attribute)</a>
@@ -767,13 +765,6 @@
 </li>
       </ul></li>
       <li>
-    openssa.l2.task.task
-
-      <ul>
-        <li><a href="openssa.l2.task.task.html#module-openssa.l2.task.task">module</a>
-</li>
-      </ul></li>
-      <li>
     openssa.l2.tool
 
       <ul>
@@ -901,15 +892,15 @@
       <li><a href="openssa.l2.agent.agent.html#openssa.l2.agent.agent.Agent.resources">resources (openssa.l2.agent.agent.Agent attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.resources">(openssa.l2.task.task.Task attribute)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.Task.resources">(openssa.l2.task.Task attribute)</a>
 </li>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.resources">(openssa.l2.task.task.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.TaskDict.resources">(openssa.l2.task.TaskDict attribute)</a>
 </li>
       </ul></li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.result">result (openssa.l2.task.task.Task attribute)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.result">result (openssa.l2.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.result">(openssa.l2.task.task.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.TaskDict.result">(openssa.l2.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.task.nature.html#openssa.l2.task.nature.TaskNature.RETRIEVE">RETRIEVE (openssa.l2.task.nature.TaskNature attribute)</a>
@@ -928,10 +919,10 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.status">status (openssa.l2.task.task.Task attribute)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.status">status (openssa.l2.task.Task attribute)</a>
 
       <ul>
-        <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict.status">(openssa.l2.task.task.TaskDict attribute)</a>
+        <li><a href="openssa.l2.task.html#openssa.l2.task.TaskDict.status">(openssa.l2.task.TaskDict attribute)</a>
 </li>
       </ul></li>
       <li><a href="openssa.l2.planning.abstract.plan.html#openssa.l2.planning.abstract.plan.AbstractPlan.sub_plans">sub_plans (openssa.l2.planning.abstract.plan.AbstractPlan attribute)</a>
@@ -942,11 +933,11 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task">Task (class in openssa.l2.task.task)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task">Task (class in openssa.l2.task)</a>
 </li>
       <li><a href="openssa.l2.planning.abstract.plan.html#openssa.l2.planning.abstract.plan.AbstractPlan.task">task (openssa.l2.planning.abstract.plan.AbstractPlan attribute)</a>
 </li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.TaskDict">TaskDict (class in openssa.l2.task.task)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.TaskDict">TaskDict (class in openssa.l2.task)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -956,7 +947,7 @@
 </li>
       <li><a href="openssa.l2.planning.hierarchical.plan.html#openssa.l2.planning.hierarchical.plan.HTP.to_dict">to_dict() (openssa.l2.planning.hierarchical.plan.HTP method)</a>
 </li>
-      <li><a href="openssa.l2.task.task.html#openssa.l2.task.task.Task.to_json_dict">to_json_dict() (openssa.l2.task.task.Task method)</a>
+      <li><a href="openssa.l2.task.html#openssa.l2.task.Task.to_json_dict">to_json_dict() (openssa.l2.task.Task method)</a>
 </li>
   </ul></td>
 </tr></table>
