feat: setup app stack

--- a/examples/semiconductor/semiconductor-ui/index.html
+++ b/examples/semiconductor/semiconductor-ui/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body
-    class="bg-gray-100 flex flex-col min-h-screen w-screen bg-black"
+    class="flex flex-col w-screen min-h-screen bg-black"
     style="background: black"
   >
     <div
@@ -48,12 +48,12 @@
             />
           </svg>
         </div>
-        <div class="flex flex-col gap-1 items-center">
+        <div class="flex flex-col items-center gap-1">
           <div>Specifications</div>
           <div>Loremm ipsum dolor sit amet consectetur</div>
         </div>
       </div>
-      <div class="flex flex-col gap-3 items-center">
+      <div class="flex flex-col items-center gap-3">
         <div
           class="flex w-4 h-4 rounded-full"
           style="background-color: #00ca51"
@@ -74,12 +74,12 @@
             />
           </svg>
         </div>
-        <div class="flex flex-col gap-1 items-center">
+        <div class="flex flex-col items-center gap-1">
           <div>Paramters</div>
           <div>Loremm ipsum dolor sit amet consectetur</div>
         </div>
       </div>
-      <div class="flex flex-col gap-3 items-center">
+      <div class="flex flex-col items-center gap-3">
         <div
           class="flex w-4 h-4 rounded-full"
           style="background-color: #00ca51"
@@ -100,14 +100,14 @@
             />
           </svg>
         </div>
-        <div class="flex flex-col gap-1 items-center">
+        <div class="flex flex-col items-center gap-1">
           <div>Steps</div>
           <div>Loremm ipsum dolor sit amet consectetur</div>
         </div>
       </div>
     </div>
     <div class="flex">
-      <div class="flex-1 flex flex-col gap-8 p-8">
+      <div class="flex flex-col flex-1 gap-8 p-8">
         <div class="flex flex-col gap-2">
           <div class="text-white">Question</div>
           <div
@@ -117,9 +117,9 @@
             <div class="p-5">
               <textarea class="w-full resize-none"></textarea>
             </div>
-            <div class="p-5 flex justify-end">
+            <div class="flex justify-end p-5">
               <button
-                class="text-white px-5 py-2 rounded-lg"
+                class="px-5 py-2 text-white rounded-lg"
                 style="background-color: white; color: black"
               >
                 Solve
@@ -129,7 +129,7 @@
         </div>
         <div class="flex flex-col gap-2">
           <div class="text-white">Specifications</div>
-          <div class="flex rounded-lg flex-col" style="background: #1f1f1f">
+          <div class="flex flex-col rounded-lg" style="background: #1f1f1f">
             <div class="flex">
               <div
                 class="flex flex-col gap-3 p-5"
@@ -140,11 +140,11 @@
                   while maintaining good selectivity over the PR mask and
                   minimizing polymer redeposition.
                 </div>
-                <ul class="list-disc pl-4">
+                <ul class="pl-4 list-disc">
                   <li>
                     Gases:
 
-                    <ul class="list-disc pl-4">
+                    <ul class="pl-4 list-disc">
                       <li>CF4: 50 sccm</li>
                       <li>CHF3: 20 sccm</li>
                       <li>Ar: 10 sccm</li>
@@ -156,15 +156,15 @@
                 </ul>
               </div>
               <div
-                class="flex justify-center flex-col gap-3 p-5"
+                class="flex flex-col justify-center gap-3 p-5"
                 style="flex: 2; background-color: #2e2e2e"
               >
                 <img src="/public/images/image-14.png" />
               </div>
             </div>
-            <div class="p-5 flex justify-end">
+            <div class="flex justify-end p-5">
               <button
-                class="text-white px-5 py-2 rounded-lg"
+                class="px-5 py-2 text-white rounded-lg"
                 style="background-color: white; color: black"
               >
                 Suggest Params
@@ -178,7 +178,7 @@
             class="flex flex-col border rounded-lg"
             style="border-color: #454545; background-color: #1a1a1a"
           >
-            <div class="p-5 flex items-center gap-2">
+            <div class="flex items-center gap-2 p-5">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -202,13 +202,13 @@
                 </defs>
               </svg>
               <div>
-                <span class="font-500 text-white">Main task:</span
+                <span class="text-white font-500">Main task:</span
                 ><span style="color: #a1a1a1; padding-left: 2px"
                   >sit amet consectetur</span
                 >
               </div>
             </div>
-            <div class="p-5 px-10 flex items-center gap-2">
+            <div class="flex items-center gap-2 p-5 px-10">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -232,13 +232,13 @@
                 </defs>
               </svg>
               <div>
-                <span class="font-500 text-white">Subtask 1:</span
+                <span class="text-white font-500">Subtask 1:</span
                 ><span style="color: #a1a1a1; padding-left: 2px"
                   >sit amet consectetur</span
                 >
               </div>
             </div>
-            <div class="p-5 px-10 flex items-center gap-2">
+            <div class="flex items-center gap-2 p-5 px-10">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -262,13 +262,13 @@
                 </defs>
               </svg>
               <div>
-                <span class="font-500 text-white">Subtask 2:</span
+                <span class="text-white font-500">Subtask 2:</span
                 ><span style="color: #a1a1a1; padding-left: 2px"
                   >sit amet consectetur</span
                 >
               </div>
             </div>
-            <div class="p-5 px-10 flex items-center gap-2">
+            <div class="flex items-center gap-2 p-5 px-10">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -292,13 +292,13 @@
                 </defs>
               </svg>
               <div>
-                <span class="font-500 text-white">Subtask 3:</span
+                <span class="text-white font-500">Subtask 3:</span
                 ><span style="color: #a1a1a1; padding-left: 2px"
                   >sit amet consectetur</span
                 >
               </div>
             </div>
-            <div class="p-5 px-10 flex items-center gap-2">
+            <div class="flex items-center gap-2 p-5 px-10">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -322,7 +322,7 @@
                 </defs>
               </svg>
               <div>
-                <span class="font-500 text-white">Subtask 4:</span
+                <span class="text-white font-500">Subtask 4:</span
                 ><span style="color: #a1a1a1; padding-left: 2px"
                   >sit amet consectetur</span
                 >
@@ -332,24 +332,24 @@
         </div>
       </div>
       <div
-        class="flex-1 flex flex-col gap-8 p-8 border-l"
+        class="flex flex-col flex-1 gap-8 p-8 border-l"
         style="border-color: #252525"
       >
         <div class="flex flex-col gap-2">
           <div class="text-white">Solution</div>
           <div
-            class="flex rounded-lg flex-col"
+            class="flex flex-col rounded-lg"
             style="background: #1f1f1f; border: 1px solid #272626"
           >
             <div
-              class="p-5 flex items-center justify-between rounded-t-lg"
+              class="flex items-center justify-between p-5 rounded-t-lg"
               style="background: #292929"
             >
-              <div class="text-white font-medium">
+              <div class="font-medium text-white">
                 First suggested parameter
               </div>
               <div
-                class="px-4 py-2 rounded-full text-xs"
+                class="px-4 py-2 text-xs rounded-full"
                 style="background-color: #00320b; color: #00ca51"
               >
                 Recommended
@@ -389,18 +389,18 @@
         </div>
         <div class="flex flex-col gap-2">
           <div
-            class="flex rounded-lg flex-col"
+            class="flex flex-col rounded-lg"
             style="background: #1f1f1f; border: 1px solid #272626; opacity: 0.6"
           >
             <div
-              class="p-5 flex items-center justify-between rounded-t-lg"
+              class="flex items-center justify-between p-5 rounded-t-lg"
               style="background: #292929"
             >
-              <div class="text-white font-medium">
+              <div class="font-medium text-white">
                 Second suggested parameter
               </div>
               <div
-                class="px-4 py-2 rounded-full text-xs"
+                class="px-4 py-2 text-xs rounded-full"
                 style="background-color: #00320b; color: #00ca51"
               >
                 Recommended
